--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="bower_components/angular/angular-csp.css"/>
         <!-- endbuild -->
 
-      <link rel="stylesheet" href="bower_components/angular-gridster/dist/styles/jquery-ui.min.css"/>
-      <link rel="stylesheet" href="bower_components/angular-gridster/dist/styles/gridster.min.css"/>
+      <!-- <link rel="stylesheet" href="bower_components/jquery-ui/themes/start/jquery-ui.min.css"/> -->
+      <link rel="stylesheet" href="bower_components/angular-gridster/dist/angular-gridster.min.css"/>
       <link rel="stylesheet" href="bower_components/select2/select2.css">
       <link rel="stylesheet" href="bower_components/pivottable/pivot.css" />
       <link rel="stylesheet" href="bower_components/dc.js/dc.css">
@@ -39,7 +39,7 @@
     <script src="bower_components/angular/angular.js"></script>
 
         <!-- build:js scripts/plugins.js -->
-        <script src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
+        <script src="bower_components/jquery-ui/jquery-ui.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/bootstrap-sass/js/affix.js"></script>
         <script src="bower_components/bootstrap-sass/js/alert.js"></script>
@@ -69,7 +69,7 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-        <script src="bower_components/angular-gridster/app/scripts/gridster.js"></script>
+        <script src="bower_components/angular-gridster/src/angular-gridster.js"></script>
         <script src="scripts/directives/dc/dc-line.js"></script>
         <script src="scripts/directives/dc/dc-pie.js"></script>
         <script src="scripts/directives/dc/dc-compose.js"></script>
