Fixed build script to include all coffee scripts, and removed the generated js and map files added screen3 and sampledata3 for the network demo. added network graph components for Angular and dc.js, but the dc.js file lives in angular directive folder at the moment updated index.html and main.html with new library dependencies Modified places where widgets are integrated... main and templates, would be useful to find another method to include new widgets in the framework Corrected some formatting, exceptions, due to warnings/errors raised by js linter
Still TODO: need to fix _chart.width()===100 when loading screen not in focus (i.e. open in a tab behind the current window)

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,9 @@
         <script src="scripts/directives/dc/dc-line.js"></script>
         <script src="scripts/directives/dc/dc-pie.js"></script>
         <script src="scripts/directives/dc/dc-compose.js"></script>
+        <script src="scripts/directives/dc/zoomableChart.js"></script>
+        <script src="scripts/directives/dc/networkGraph.js"></script>
+        <script src="scripts/directives/dc/dc-network.js"></script>
         <script src="scripts/directives/dc/template.js"></script>
         <script src="scripts/directives/dc/dc.js"></script>
         <script src="scripts/directives/pivottable/pivottable.js"></script>
